Dolorum odio sit amet. Natus est est dolores. Nesciunt molestiae voluptatem sint nesciunt iusto nemo alias accusamus sit. Magnam non distinctio laudantium. Corporis impedit corporis commodi voluptas ea laudantium sunt eum.

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'clang-format Code Formatter'
+name:#'clang-format Code Formatter'
 description: 'Runs clang-format on your source code so your users do not have to'
 author: 'antoinealb'
 inputs: 
@@ -10,3 +10,4 @@ runs:
   image: 'Dockerfile'
   args:
     - ${{ inputs.myInput }}
+ 
